minor overlooked fixes

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -53,7 +53,7 @@ If you have the link:https://www.gnu.org/software/coreutils/base64[base64] comma
 * GitLab: link:https://docs.gitlab.com/ee/api/users.html#for-normal-users[List users: For normal users], use the `username` filter: `/users?username=:username`. See the `id` value in the response.
 * Bitbucket Server: link:https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-api/#api-api-latest-users-userslug-get[Get users]. See the `id` value in the response.
 
-. Prepare a new {orch-name} Secret in your user {orch-namespace}.
+. Prepare a new {orch-name} Secret.
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
@@ -106,7 +106,7 @@ On OpenShift, you can use the `oc` command-line tool:
 [source,subs="+quotes,+attributes"]
 ----
 $ oc apply -f - <<EOF
-__<Secret_prepared_in_the_previous_step>__
+__<Secret_prepared_in_step_5>__
 EOF
 ----
 ====
