procedures: more options for minikube

--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -21,10 +21,10 @@ WARNING: Remember that single-node {kubernetes} clusters are suited only for tes
 
 .Procedure
 
-. Start Minikube. Allocate at least 8GB of RAM and 4 CPU cores:
+. Start Minikube. Allocate at least 10GB of RAM and 4 CPU cores:
 +
 ----
-$ minikube start --addons=ingress --vm=true --memory=8192 --cpus=4
+$ minikube start --addons=ingress,dashboard --vm=true --memory=10240 --cpus=4 --disk-size=50GB --kubernetes-version=v1.23.9
 ----
 
 . Create the {prod-short} instance:
