--- a/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
+++ b/modules/end-user-guide/pages/authenticating-to-a-git-server-from-a-workspace.adoc
@@ -9,11 +9,11 @@
 
 In a workspace, you can run Git commands that require user authentication like cloning a remote private Git repository or pushing to a remote public or private Git repository.
 
-User authentication to a Git server from a workspace is configured by the administrator or alternatively by the individual user:
+User authentication to a Git server from a workspace is configured by the administrator or in some cases by the individual user:
 
 * Your administrator sets up an xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[OAuth application on GitHub, GitLab, or Bitbucket] for your organization's {prod} instance.
 
-* Alternatively, you, as a user, create and apply your own {kubernetes} Secret for your xref:using-a-git-provider-access-token.adoc[Git-provider access token].
+* As a workaround, users create and apply their own {kubernetes} Secrets for their personal xref:using-a-git-provider-access-token.adoc[Git-provider access tokens].
 
 .Additional resources
 * xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[Administration Guide: OAuth for GitHub, GitLab, or Bitbucket]
