--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -7,7 +7,7 @@
 [id="using-a-git-provider-access-token"]
 = Using a Git-provider access token
 
-OAuth for GitHub, GitLab, or Bitbucket needs to be xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[configured by the administrator] of your organization's {prod-short} instance. If the administrator has not configured it for {prod-short} users, alternatively you can apply your personal access token as a {kubernetes} Secret.
+OAuth for GitHub, GitLab, or Bitbucket needs to be xref:administration-guide:oauth-for-github-gitlab-or-bitbucket.adoc[configured by the administrator] of your organization's {prod-short} instance. If it was not possible for your administrator to configure it for {prod-short} users, the workaround is for you to apply your personal access token as a {kubernetes} Secret.
 
 Mounting your access token as a Secret enables the {prod-short} Server to access the remote repository that is cloned during workspace creation, including access to the repository's `/.che` and `/.vscode` folders.
 
