--- a/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
+++ b/modules/end-user-guide/pages/managing-workspaces-with-apis.adoc
@@ -1,21 +1,26 @@
 :_content-type: ASSEMBLY
-:navtitle: Managing workspaces with OpenShift APIs
-:description: Managing workspaces with OpenShift APIs
+:navtitle: Managing workspaces with {orch-name} APIs
+:description: Managing workspaces with {orch-name} APIs
 :keywords: api, list workspaces, create workspace, restart workspace, stop workspace, start workspace, remove workspace
 // :page-aliases:
 
 [id="managing-workspaces-with-apis"]
-= Managing workspaces with OpenShift APIs
+= Managing workspaces with {orch-name} APIs
 
-...
+On a {platforms-name} cluster, {prod-short} workspaces are represented as `DevWorkspace` custom resources of the same name.
+As a result, if there is a workspace named `my-workspace` in the {prod-short} dashboard, there is a `DevWorkspace` named `my-workspace` in the user's {orch-namespace} on the {orch-name} cluster.
 
-Consider writing this entire page as a reference. (If so, then rename all the files in `/partials/` and in the `include::` statements below from `proc_` to `ref_`.)
+Since `DevWorkspaces` on the cluster represent {prod-short} workspaces, this allows managing {prod-short} workspaces using {orch-name} APIs with clients such as {orch-cli}.
+
+Each `DevWorkspace` contains details derived from the workspace project's devfile, such as workspace container configurations and devfile commands.
+
+Each `DevWorkspace` also references a `DevWorkspaceTemplate` custom resource using the `spec.contributions` field, which contains details about the editor for the workspace.
+
+To manage a workspace with {orch-name} APIs, you must determine the workspace `NAME` and the `NAMESPACE` it is located in.
 
 include::partial$proc_listing-workspaces.adoc[leveloffset=+1]
 
 include::partial$proc_creating-workspaces.adoc[leveloffset=+1]
-
-include::partial$proc_restarting-workspaces.adoc[leveloffset=+1]
 
 include::partial$proc_stopping-workspaces.adoc[leveloffset=+1]
 
