--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -1,15 +1,29 @@
 
 [id="listing-workspaces"]
-= Listing workspaces
+= Listing all workspaces
 
-Explain why `--all-namespaces`.
+Run the following command to list all workspaces for all users.
 
 [source,subs="+attributes"]
 ----
-$ {orch-cli} get devworkspace --all-namespaces
+$ {orch-cli} get devworkspaces
+
+NAMESPACE   NAME                 DEVWORKSPACE ID             PHASE     INFO
+user1-dev   golang-example       workspacedf64e4a492cd4701   Stopped   Stopped
+user1-dev   php-symfony          workspace5a8f37a0a0d94ea3   Stopped   Stopped
 ----
 
-TIP: You can add the `--watch` flag.
+TIP: You can add the `--watch` flag to view updates when the workspace's `PHASE` changes.
 
-To be confirmed by the assigned SME.
+Admins can add the `--all-namespaces` flag to list all workspaces from all users.
 
+[source,subs="+attributes"]
+----
+$ {orch-cli} get devworkspaces --all-namespaces
+
+NAMESPACE   NAME                 DEVWORKSPACE ID             PHASE     INFO
+user1-dev   golang-example       workspacedf64e4a492cd4701   Stopped   Stopped
+user1-dev   php-symfony          workspace5a8f37a0a0d94ea3   Stopped   Stopped
+user2-dev   python-hello-world   workspace69c26884bbc141f2   Failed    Container tooling has state CrashLoopBackOff
+user3-dev   spring-petclinic     workspace6d99e9ffb9784491   Running   https://url-to-workspace.com
+----
