add the snip and include for supporteed platforms cli (only downstream, blank upstream) and minor edits in related files

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-cli.adoc
@@ -11,6 +11,8 @@ You can install {prod-short} on OpenShift.
 
 .Prerequisites
 
+include::example$snip_{project-context}-supported-platforms-cli.adoc[]
+
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
 * `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
