--- a/modules/administration-guide/pages/supported-platforms.adoc
+++ b/modules/administration-guide/pages/supported-platforms.adoc
@@ -1,10 +1,10 @@
-:_content-type: ASSEMBLY
+:_content-type: REFERENCE
 :description: Supported platforms
-:keywords: administration guide, supported-platforms
+:keywords: platform, supported-platforms
 :navtitle: Supported platforms
 :page-aliases: installation-guide:supported-platforms.adoc
 
 [id="supported-platforms"]
 = Supported platforms
 
-include::example$snip_{project-context}-supported-platforms-and-installation-methods.adoc[leveloffset=+1]
+include::example$snip_{project-context}-supported-platforms.adoc[]
