--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -32,7 +32,8 @@ inline:
   components:
     - name: intellij
       container:
-        image: 'quay.io/che-incubator/che-idea@sha256:b02663b2aea521bcbcafdbec7eba27b6d804e3885dc54bb7d5c771ed77d4a97f'
+```suggestion
+        image: 'quay.io/che-incubator/che-idea:next'
         volumeMounts:
           - name: projector-user
             path: /home/projector-user
