--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -46,7 +46,7 @@ This also provides the GitHub authentication used by Settings Sync.
 
 Port::
 Detects opening ports and provides redirect URI.
-When a process starts listening to a port, {prod-short} displays an alert with a link to open the resulting resource.
+When a process starts listening to a port, {prod-short} displays a notification with a link to open the resulting resource.
 +
 .Procedure
 * To display the endpoint list, type: kbd:[F1] `Explorer: Focus on endpoints View` kbd:[Enter].
