--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -21,7 +21,7 @@ WARNING: Remember that single-node {kubernetes} clusters are suited only for tes
 
 .Procedure
 
-. Start Minikube with required addons and sufficient resources:
+. Start Minikube with required add-ons and sufficient resources:
 +
 ----
 $ minikube start --addons=ingress,dashboard --vm=true --memory=10240 --cpus=4 --disk-size=50GB --kubernetes-version=v1.23.9
