--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -58,7 +58,7 @@ Resource monitor::
 Monitors resources such as CPU and RAM.
 
 Telemetry::
-Detects and sends the following events to a backend telemetry plugin listening on `http://localhost:$\{DEVWORKSPACE_TELEMETRY_BACKEND_PORT}`:
+Detects and sends the following events to a backend telemetry plugin listening on `\http://localhost:$\{DEVWORKSPACE_TELEMETRY_BACKEND_PORT}`:
 
 `WORKSPACE_OPENED`:::
 Sent when the telemetry extension activates
