--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -20,7 +20,7 @@ This makes a {prod-short} workspace highly portable.
 
 The embedded browser-based IDE is the point of access for everything running in a {prod-short} workspace.
 
-== Visual Studio Code
+== Microsoft Visual Studio Code - Open Source
 
 Visual Studio Code is the default browser-based IDE.
 
