Apply suggestions from code review
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -27,13 +27,13 @@ Visual Studio Code is the default browser-based IDE.
 {prod-short} adds these extensions:
 
 Commands::
-Translates Devfile commands to Visual Studio Code tasks.
+Translates Devfile commands to Microsoft Visual Studio Code - Open Source tasks.
 +
 .Procedure
 * To see the drop-down list of available tasks, type: kbd:[F1] `Tasks: Run Task` kbd:[Enter] `che`.
 
 Activity tracker::
-Tracks events provided by the Visual Studio Code to determine and stop inactive workspaces.
+Tracks events provided by the Microsoft Visual Studio Code - Open Source to determine and stop inactive workspaces.
 This extension does not save, collect, or store data.
 
 API::
