--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -22,7 +22,7 @@ The embedded browser-based IDE is the point of access for everything running in 
 
 == Microsoft Visual Studio Code - Open Source
 
-Visual Studio Code is the default browser-based IDE.
+Microsoft Visual Studio Code - Open Source is the default browser-based IDE.
 
 {prod-short} adds these extensions:
 
