chore: add content-type to snippets
fixes https://issues.redhat.com/browse/RHDEVDOCS-4600

--- a/modules/administration-guide/examples/snip_che-installing-che.adoc
+++ b/modules/administration-guide/examples/snip_che-installing-che.adoc
@@ -1,3 +1,5 @@
+:_content-type: SNIPPET
+
 The installation method depends on the target platform and the environment restrictions.
 
 .Using {prod-short} as a service
