--- a/modules/administration-guide/partials/snip_installing-che-in-a-restricted-environment-additional-resources.adoc
+++ b/modules/administration-guide/partials/snip_installing-che-in-a-restricted-environment-additional-resources.adoc
@@ -1,3 +1,5 @@
+:_content-type: SNIPPET
+
 .Additional resources
 
 * link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/understanding/olm-rh-catalogs.html[Red Hat-provided Operator catalogs]
