--- a/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
+++ b/modules/administration-guide/partials/snip_mounting-a-secret-or-a-configmap-into-a-container.adoc
@@ -1,3 +1,5 @@
+:_content-type: SNIPPET
+
 // Module included in the following procedures:
 //
 // mounting-a-secret-or-a-configmap-as-an-environment-variable-into-a-container
