--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -1,3 +1,5 @@
+:_content-type: SNIPPET
+
 // Included in:
 // ../pages/installing-che-in-a-restricted-environment.adoc
 // ../pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
