--- a/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
+++ b/modules/end-user-guide/examples/con_customizing-ide-selection-with-the-che-editor-file.adoc
@@ -1,3 +1,4 @@
+:_content-type: CONCEPT
 [id="customizing-ide-selection-with-the-che-editor-file"]
 = Customizing IDE selection with the `che-editor.yaml` file
 
