--- a/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
+++ b/modules/end-user-guide/examples/proc_using-the-che-prod-editor-file-to-select-an-ide.adoc
@@ -1,3 +1,4 @@
+:_content-type: PROCEDURE
 [id="using-the-che-prod-editor-file-to-select-an-ide"]
 = Using the {prod-short} editor file to select an IDE
 
