--- a/modules/end-user-guide/examples/snip_che-supported-languages.adoc
+++ b/modules/end-user-guide/examples/snip_che-supported-languages.adoc
@@ -1,3 +1,5 @@
+:_content-type: SNIPPET
+
 Apache Camel K:: Stack ready to develop Integration projects with Apache Camel K
 Apache Camel based on Spring Boot:: Stack with environment ready to develop Integration projects with Apache Camel based on Spring Boot.
 Bash:: Stack with environment ready to develop bash scripts.
