--- a/modules/administration-guide/examples/snip_che-architecture-overview-with-devworkspace-additional-resources.adoc
+++ b/modules/administration-guide/examples/snip_che-architecture-overview-with-devworkspace-additional-resources.adoc
@@ -1,1 +1,3 @@
+:_content-type: SNIPPET
+
 * link:https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/[Kubernetes documentation - Custom Resources]
