--- a/modules/administration-guide/examples/snip_che-devworkspace-additional-resources.adoc
+++ b/modules/administration-guide/examples/snip_che-devworkspace-additional-resources.adoc
@@ -1,2 +1,4 @@
+:_content-type: SNIPPET
+
 * link:https://quay.io/repository/devfile/devworkspace-controller?tab=history[`quay.io/devfile/devworkspace-controller` container image]
 * link:https://github.com/devfile/devworkspace-operator[{devworkspace} Operator repository] 
