chore: use plugin rather than plug-in
fixes https://issues.redhat.com/browse/RHDEVDOCS-4763

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -11,7 +11,7 @@
 **** xref:devfile-registries.adoc[]
 **** xref:che-server.adoc[]
 **** xref:postgresql.adoc[]
-**** xref:plug-in-registry.adoc[]
+**** xref:plugin-registry.adoc[]
 *** xref:user-workspaces.adoc[]
 ** xref:calculating-che-resource-requirements.adoc[]
 * xref:installing-che.adoc[]
