--- a/modules/administration-guide/pages/che-operator.adoc
+++ b/modules/administration-guide/pages/che-operator.adoc
@@ -26,7 +26,7 @@ On a cluster with the {prod-short} operator, it is possible to create a `CheClus
 * xref:devfile-registries.adoc[]
 * xref:che-server.adoc[]
 * xref:postgresql.adoc[]
-* xref:plug-in-registry.adoc[]
+* xref:plugin-registry.adoc[]
 
 .Additional resources
 
