--- a/modules/administration-guide/pages/dashboard.adoc
+++ b/modules/administration-guide/pages/dashboard.adoc
@@ -16,7 +16,7 @@ It need access to:
 
 * xref:devfile-registries.adoc[] 
 * xref:che-server.adoc[]
-* xref:plug-in-registry.adoc[]
+* xref:plugin-registry.adoc[]
 * {orch-name} API
 
 .User dashboard interactions with other components
@@ -27,7 +27,7 @@ When the user requests the user dashboard to start a workspace, the user dashboa
 . Collects the devfile from the xref:devfile-registries.adoc[], when the user is creating a workspace from a code sample.
 . Sends the repository URL to xref:che-server.adoc[] and expects a devfile in return, when the user is creating a workspace from a remote devfile.
 . Reads the devfile describing the workspace.
-. Collects the additional metadata from the xref:plug-in-registry.adoc[].
+. Collects the additional metadata from the xref:plugin-registry.adoc[].
 . Converts the information into a {devworkspace} Custom Resource.
 . Creates the {devworkspace} Custom Resource in the user {orch-namespace} using the {orch-name} API.
 . Watches the {devworkspace} Custom Resource status.
