--- a/modules/administration-guide/pages/gateway.adoc
+++ b/modules/administration-guide/pages/gateway.adoc
@@ -22,7 +22,7 @@ It controls access to:
 * xref:dashboard.adoc[]
 * xref:devfile-registries.adoc[]
 * xref:che-server.adoc[]
-* xref:plug-in-registry.adoc[]
+* xref:plugin-registry.adoc[]
 * xref:user-workspaces.adoc[]
 
 .{prod-short} gateway interactions with other components
