--- a/modules/administration-guide/pages/server-components.adoc
+++ b/modules/administration-guide/pages/server-components.adoc
@@ -21,4 +21,4 @@ image::architecture/{project-context}-deployments-interacting-with-devworkspace.
 * xref:devfile-registries.adoc[]
 * xref:che-server.adoc[]
 * xref:postgresql.adoc[]
-* xref:plug-in-registry.adoc[]
+* xref:plugin-registry.adoc[]
