--- a/modules/administration-guide/pages/user-workspaces.adoc
+++ b/modules/administration-guide/pages/user-workspaces.adoc
@@ -21,7 +21,7 @@ A User workspace is a web application. It consists of microservices running in c
 * Plug-ins
 * Application runtimes
 
-A workspace is one {orch-name} Deployment containing the workspace containers and enabled plug-ins, plus related {orch-name} components:
+A workspace is one {orch-name} Deployment containing the workspace containers and enabled plugins, plus related {orch-name} components:
 
 * Containers
 * ConfigMaps
