--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -3,7 +3,7 @@
 
 The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE that is available in the table of supported in-browser IDEs in xref:selecting-a-workspace-ide.adoc[]:
 
-.`id` selects an IDE from the plug-in registry
+.`id` selects an IDE from the plugin registry
 ====
 [source,yaml]
 ----
@@ -11,7 +11,7 @@ id: che-incubator/che-idea/latest
 ----
 ====
 
-As alternatives to providing the `id` parameter, the `che-editor.yaml` file supports a `reference` to the URL of another `che-editor.yaml` file or an `inline` definition for an IDE outside of a plug-in registry:
+As alternatives to providing the `id` parameter, the `che-editor.yaml` file supports a `reference` to the URL of another `che-editor.yaml` file or an `inline` definition for an IDE outside of a plugin registry:
 
 .`reference` points to a remote `che-editor.yaml` file
 ====
@@ -21,7 +21,7 @@ reference: https://__<hostname_and_path_to_a_remote_file>__/che-editor.yaml
 ----
 ====
 
-.`inline` specifies a complete definition for a customized IDE without a plug-in registry
+.`inline` specifies a complete definition for a customized IDE without a plugin registry
 ====
 [source,yaml]
 ----
@@ -61,14 +61,14 @@ inline:
 
 For more complex scenarios, the `che-editor.yaml` file supports the `registryUrl` and `override` parameters:
 
-.`registryUrl` points to a custom plug-in registry rather than to the default {prod-short} plug-in registry
+.`registryUrl` points to a custom plugin registry rather than to the default {prod-short} plugin registry
 ====
 [source,yaml,subs="+quotes"]
 ----
 id: __<editor_id>__ # <1>
-registryUrl: __<url_of_custom_plug-in_registry>__
+registryUrl: __<url_of_custom_plugin_registry>__
 ----
-<1> The `id` of the IDE in the custom plug-in registry.
+<1> The `id` of the IDE in the custom plugin registry.
 ====
 
 .`override` of the default value of one or more defined properties of the IDE
