--- a/modules/extensions/partials/con_features-of-openshift-connector.adoc
+++ b/modules/extensions/partials/con_features-of-openshift-connector.adoc
@@ -4,7 +4,7 @@
 [id="features-of-openshift-connector"]
 = Features of OpenShift Connector
 
-The OpenShift Connector plug-in enables the user create, deploy, and push OpenShift Components to an OpenShift Cluster in a GUI.
+The OpenShift Connector plugin enables the user create, deploy, and push OpenShift Components to an OpenShift Cluster in a GUI.
 
 When used in {prod-short}, the OpenShift Connector GUI provides the following benefits to its users:
 
