--- a/modules/extensions/partials/proc_installing-openshift-connector-in-che.adoc
+++ b/modules/extensions/partials/proc_installing-openshift-connector-in-che.adoc
@@ -5,8 +5,8 @@
 [id="installing-openshift-connector-in-{prod-id-short}"]
 = Installing OpenShift Connector in {prod-short}
 
-OpenShift Connector is a plug-in designed to create basic OpenShift Components, using {prod-short} as the editor, and to deploy the Component to an OpenShift cluster.
-To visually verify that the plug-in is available in your instance, see whether the OpenShift icon is displayed in the {prod-short} left menu.
+OpenShift Connector is a plugin designed to create basic OpenShift Components, using {prod-short} as the editor, and to deploy the Component to an OpenShift cluster.
+To visually verify that the plugin is available in your instance, see whether the OpenShift icon is displayed in the {prod-short} left menu.
 
 To install and enable OpenShift Connector in a {prod-short} instance, use instructions in this section.
 
