--- a/modules/hosted-che/partials/ref_about-hosted-che.adoc
+++ b/modules/hosted-che/partials/ref_about-hosted-che.adoc
@@ -19,7 +19,7 @@ image::hosted-che/get-started-product-and-community-devfiles.png[]
 
 [IMPORTANT]
 ====
-Eclipse Che and {rh-os-devspaces} share all the features - all the product's functionality is available in the project and vice versa. However, not all the upstream plug-ins are available in the {rh-os-devspaces}. To use an unsupported plug-in inside the {rh-os-devspaces}, one must explicitly point to the raw `meta.yaml` of the plug-in from the devfile. 
+Eclipse Che and {rh-os-devspaces} share all the features - all the product's functionality is available in the project and vice versa. However, not all the upstream plugins are available in the {rh-os-devspaces}. To use an unsupported plugin inside the {rh-os-devspaces}, one must explicitly point to the raw `meta.yaml` of the plugin from the devfile.
 ====
 
 [id="terms-of-service"]
