--- a/modules/overview/pages/introduction-to-eclipse-che.adoc
+++ b/modules/overview/pages/introduction-to-eclipse-che.adoc
@@ -13,7 +13,7 @@
 * An enterprise integration using OpenShift OAuth or Dex.
 * Browser-based IDEs; integration with Che-Theia or any other web IDE, such as Jupyter.
 * Support of tools protocols, such as the Language Server Protocol or Debug Adapter Protocol.
-* A plug-in mechanism compatible with Visual Studio Code extensions.
+* A plugin mechanism compatible with Visual Studio Code extensions.
 * A software development kit (SDK) for creating custom cloud developer platforms.
 
 [id="getting-started-with-{prod-id-short}"]
@@ -73,7 +73,7 @@ To achieve those core goals, {prod} provides:
 
 * *Workspaces:* Container-based developer workspaces providing all the tools and dependencies needed to code, build, test, run, and debug applications.
 * *Browser-based IDEs:* Bundled browser-based IDEs with language tools, debuggers, terminal, VCS integration, and much more.
-* *Extensible platform:* Bring your own IDE. Define, configure, and extend the tools that you need for your application by using plug-ins, which are compatible with Visual Studio Code extensions.
+* *Extensible platform:* Bring your own IDE. Define, configure, and extend the tools that you need for your application by using plugins, which are compatible with Visual Studio Code extensions.
 * *Enterprise Integration:* Multiuser capabilities with OIDC authentication.
 
 === Workspace model
@@ -120,18 +120,18 @@ For situations where the default IDE does not cover the use cases of the users o
 
 {prod} is extensible in different ways:
 
-* *Plug-ins* to add capabilities to the IDE. Che-Theia plug-ins rely on APIs compatible with Visual Studio Code. Plug-ins are isolated and provide their own dependencies packaged in containers.
+* *Plug-ins* to add capabilities to the IDE. Che-Theia plugins rely on APIs compatible with Visual Studio Code. Plug-ins are isolated and provide their own dependencies packaged in containers.
 * *Stacks* to create pre-configured {prod-short} workspaces with a dedicated set of tools.
 * *Alternative IDEs* to provide specialized tools within {prod}. Build your own, based on Eclipse Theia, or pick existing ones such as Jupyter.
 * *Marketplace (soon)* to easily distribute tools and custom IDEs, which can be tried online, to users and communities.
 
 {prod} uses Che-Theia as its default browser-based IDE. Che-Theia provides a framework to build web IDEs. It is built-in TypeScript and gives contributors a programming model that is flexible, relies on state-of-the-art tools protocols, and makes it faster to build new tools.
 
-In {prod}, the dependencies needed for the tools running in the user's workspace are available when needed. This means that a Che-Theia plug-in provides its dependencies, its back-end services (which could be running in a sidecar container connected to the user’s workspace), and the IDE UI extension. {prod-short} packages all these elements together, so that the user does not have to configure different tools together.
+In {prod}, the dependencies needed for the tools running in the user's workspace are available when needed. This means that a Che-Theia plugin provides its dependencies, its back-end services (which could be running in a sidecar container connected to the user’s workspace), and the IDE UI extension. {prod-short} packages all these elements together, so that the user does not have to configure different tools together.
 
 ==== Visual Studio Code extension compatibility
 
-{prod} rationalizes the effort for a contributor who wants to build a plug-in and distribute it to different developer communities and tools. For that purpose, {prod} features a plug-in API compatible with extension points from Visual Studio Code. As a result, it is easy to bring an existing plug-in from Visual Studio Code into {prod}. The main difference is in the way the plug-ins are packaged. On {prod}, plug-ins are delivered with their own dependencies in their own container.
+{prod} rationalizes the effort for a contributor who wants to build a plugin and distribute it to different developer communities and tools. For that purpose, {prod} features a plugin API compatible with extension points from Visual Studio Code. As a result, it is easy to bring an existing plugin from Visual Studio Code into {prod}. The main difference is in the way the plugins are packaged. On {prod}, plugins are delivered with their own dependencies in their own container.
 
 video::HbTKDlOL1eo[youtube]
 
