--- a/modules/administration-guide/examples/snip_che-technology-preview.adoc
+++ b/modules/administration-guide/examples/snip_che-technology-preview.adoc
@@ -3,7 +3,7 @@
 //To indicate that a feature is in Technology Preview, include the examples/snip_che-technology-preview.adoc file in the feature’s assembly or module to keep the supportability wording consistent across Technology Preview features.
 //Provide a value for the :FeatureName: variable before you include this module.
 //e.g.:
-//:FeatureName: The XYZ plug-in
+//:FeatureName: The XYZ plugin
 //include::examples/snip_che-technology-preview.adoc[]
 //If you don't do this, the result will be an incorrect replacement.
 
