--- a/modules/administration-guide/pages/che-theia-workspaces.adoc
+++ b/modules/administration-guide/pages/che-theia-workspaces.adoc
@@ -10,7 +10,7 @@
 [id="telemetry-overview"]
 == Telemetry overview
 
-Telemetry is the explicit and ethical collection of operation data. By default, telemetry is not available in {prod}, but in the Che-Theia editor there is an abstract API that allows enabling telemetry using the plug-in mechanism and in the `chectl` command line tool usage data can be collected using segment. This approach is used in the {hosted-che-docs} service where telemetry is enabled for every Che-Theia workspace.
+Telemetry is the explicit and ethical collection of operation data. By default, telemetry is not available in {prod}, but in the Che-Theia editor there is an abstract API that allows enabling telemetry using the plugin mechanism and in the `chectl` command line tool usage data can be collected using segment. This approach is used in the {hosted-che-docs} service where telemetry is enabled for every Che-Theia workspace.
 
 This documentation includes a guide describing how to make your own telemetry client for {prod}, followed by an overview of the link:https://github.com/che-incubator/che-workspace-telemetry-woopra-plugin[{prod} Woopra Telemetry Plugin].
 
@@ -26,11 +26,11 @@ This documentation includes a guide describing how to make your own telemetry cl
 == How it works
 [id="how-it-works"]
 
-When a {devworkspace} starts, the `che-theia` container starts the telemetry plug-in which is responsible for sending telemetry events to a backend. If the `$DEVWORKSPACE_TELEMETRY_BACKEND_PORT` environment variable is set in the {devworkspace} Pod, the telemetry plug-in sends events to a backend listening at that port. The backend turns received events into a backend-specific representation of the events and sends them to the configured analytics backend (for example, Segment or Woopra).
+When a {devworkspace} starts, the `che-theia` container starts the telemetry plugin which is responsible for sending telemetry events to a backend. If the `$DEVWORKSPACE_TELEMETRY_BACKEND_PORT` environment variable is set in the {devworkspace} Pod, the telemetry plugin sends events to a backend listening at that port. The backend turns received events into a backend-specific representation of the events and sends them to the configured analytics backend (for example, Segment or Woopra).
 
 image::telemetry/telemetry_diagram.png[]
 
-== Events sent to the backend by the Che-Theia telemetry plug-in
+== Events sent to the backend by the Che-Theia telemetry plugin
 
 [cols="2,5", options="header"]
 :=== 
@@ -41,4 +41,4 @@ PUSH_TO_REMOTE: Sent when a Git push was made with the `git.push` Theia command
 EDITOR_USED: Sent when a file was changed within the editor
 :=== 
 
-Other events such as `WORKSPACE_INACTIVE` and `WORKSPACE_STOPPED` can be detected within the back-end plug-in.
+Other events such as `WORKSPACE_INACTIVE` and `WORKSPACE_STOPPED` can be detected within the back-end plugin.
