--- a/modules/administration-guide/pages/plugin-registry.adoc
+++ b/modules/administration-guide/pages/plugin-registry.adoc
@@ -1,14 +1,14 @@
 :_content-type: CONCEPT
 :description: Plug-in registry
-:keywords: administration-guide, architecture, server, devworkspace, plug-in, registry
+:keywords: administration-guide, architecture, server, devworkspace, plugin, registry
 :navtitle: Plug-in registry
-:page-aliases:
+:page-aliases: plug-in-registry
 
-[id="plug-in-registry"]
+[id="plugin-registry"]
 = Plug-in registry
 
 Each {prod-short} workspace starts with a specific editor and set of associated extensions.
-The {prod-short} plug-in registry provides the list of available editors and editor extensions. 
+The {prod-short} plugin registry provides the list of available editors and editor extensions.
 A Devfile v2 describes each editor or extension.
 
 The xref:dashboard.adoc[] is reading the content of the registry.
@@ -18,6 +18,6 @@ image::architecture/{project-context}-plugin-registry-interactions.png[Plug-in r
 
 .Additional resources
 
-* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[Editors definitions in the {prod-short} plug-in registry repository]
-* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-theia-plugins.yaml[Plug-ins definitions in the {prod-short} plug-in registry repository]
+* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-editors.yaml[Editors definitions in the {prod-short} plugin registry repository]
+* link:https://github.com/eclipse-che/che-plugin-registry/blob/main/che-theia-plugins.yaml[Plug-ins definitions in the {prod-short} plugin registry repository]
 * link:https://eclipse-che.github.io/che-plugin-registry/main/index.json[Plug-in registry latest community version online instance]
