--- a/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
+++ b/modules/end-user-guide/pages/adding-a-vscode-extension.adoc
@@ -7,16 +7,16 @@
 [id="adding-visual-studio-code-extension"]
 = Adding a Visual Studio Code extension to a workspace
 
-Previously, with the devfiles v1 format, you used the devfile to specify IDE-specific plug-ins and Visual Studio Code extensions. Now, with devfiles v2, you use a specific meta-folder rather than the devfile to specify the plug-ins and extensions.
+Previously, with the devfiles v1 format, you used the devfile to specify IDE-specific plugins and Visual Studio Code extensions. Now, with devfiles v2, you use a specific meta-folder rather than the devfile to specify the plugins and extensions.
 
-[id="plug-in-registries"]
-== {prod-short} plug-in registries overview
+[id="plugin-registries"]
+== {prod-short} plugin registries overview
 
-Every {prod-short} instance has a registry of default plug-ins and extensions. The Che-Theia IDE gets information about these plug-ins and extensions from the registry and installs them.
+Every {prod-short} instance has a registry of default plugins and extensions. The Che-Theia IDE gets information about these plugins and extensions from the registry and installs them.
 
-Check this {prod-short} link:https://github.com/eclipse-che/che-plugin-registry[registry project] for an overview of the default plug-ins, extensions, and source code. An online instance that refreshes after every commit to the main branch, is located link:https://eclipse-che.github.io/che-plugin-registry/main/v3/plugins/[here]. You can use a different plug-in or extension registry for Che-Theia if you don't work in a restricted environment: only the default registry is available there.
+Check this {prod-short} link:https://github.com/eclipse-che/che-plugin-registry[registry project] for an overview of the default plugins, extensions, and source code. An online instance that refreshes after every commit to the main branch, is located link:https://eclipse-che.github.io/che-plugin-registry/main/v3/plugins/[here]. You can use a different plugin or extension registry for Che-Theia if you don't work in a restricted environment: only the default registry is available there.
 
-The plug-in and extension overview for Che-Code Visual Studio Code editor is located in the link:https://www.open-vsx.org/[OpenVSX instance]. Air gap is not yet supported for this editor.
+The plugin and extension overview for Che-Code Visual Studio Code editor is located in the link:https://www.open-vsx.org/[OpenVSX instance]. Air gap is not yet supported for this editor.
 
 [id="visual-studio-code-extensions-json"]
 == Adding an extension to `.vscode/extensions.json`
@@ -43,23 +43,23 @@ If you use the Che-Theia IDE, the extension is installed and configured automati
 NOTE: If the specified set of extension IDs isn't available in the {prod-short} registry, the workspace starts without the extension.
 
 
-[id="che-theia-plug-ins-YAML"]
-== Adding plug-in parameters to `.che/che-theia-plugins.yaml`
-You can add extra parameters to a plug-in by modifying the `.che/che-theia-plugins.yaml` file. These modifications include:
+[id="che-theia-plugins-YAML"]
+== Adding plugin parameters to `.che/che-theia-plugins.yaml`
+You can add extra parameters to a plugin by modifying the `.che/che-theia-plugins.yaml` file. These modifications include:
 
-* Defining the plug-ins for workspace installation.
+* Defining the plugins for workspace installation.
 * Changing the default memory limit.
 * Overriding default preferences.
 
 
-=== Defining the plug-ins for workspace installation
-Define the plug-ins to be installed in the workspace.
+=== Defining the plugins for workspace installation
+Define the plugins to be installed in the workspace.
 
 .Prerequisites
 . You have the `.che/che-theia-plugins.yaml` file in the root of the GitHub repository.
 
 .Procedure
-. Add the ID of the plug-in to the  `.che/che-theia-plugins.yaml` file. Use the `/` sign to separate the publisher and plug-in name. The following example uses the IDs of Red Hat Visual Studio Code Java extension:
+. Add the ID of the plugin to the  `.che/che-theia-plugins.yaml` file. Use the `/` sign to separate the publisher and plugin name. The following example uses the IDs of Red Hat Visual Studio Code Java extension:
 +
 [source,yaml,subs="+quotes"]
 ----
@@ -74,7 +74,7 @@ Override container settings such as the memory limit.
 . You have the `.che/che-theia-plugins.yaml` file in the root of the GitHub repository.
 
 .Procedure
-. Add an `override` section to the `.che/che-theia-plugins.yaml` file under the `id` of the plug-in.
+. Add an `override` section to the `.che/che-theia-plugins.yaml` file under the `id` of the plugin.
 . Specify the memory limit for the extension. In the following example, {prod-short} automatically installs the Red Hat Visual Studio Code Java extension in the {prod-short} workspace and increases the memory of the workspace by two gigabytes:
 +
 [source,yaml,subs="+quotes"]
@@ -119,7 +119,7 @@ You can also define the preferences in the `.vscode/settings.json` file, either 
 [id="visual-studio-code-extensions-in-devfile"]
 == Defining Visual Studio Code extension attributes in the devfile
 
-If it's not possible to add extra files in the GitHub repository, you can define some of the plug-in or extension attributes by inlining them in the devfile. You can use this procedure with both `.vscode/extensions.json` and `.che/che-theia-plugins.yaml` file contents.
+If it's not possible to add extra files in the GitHub repository, you can define some of the plugin or extension attributes by inlining them in the devfile. You can use this procedure with both `.vscode/extensions.json` and `.che/che-theia-plugins.yaml` file contents.
 
 === Inlining `.vscode/extensions.json` file
 Use `.vscode/extensions.json` file contents to inline the extension attributes in the devfile.
@@ -144,7 +144,7 @@ attributes:
 ----
 
 === Inlining `.che/che-theia-plugins.yaml` file
-Use `.che/che-theia-plugins.yaml` file contents to inline the plug-in attributes in the devfile.
+Use `.che/che-theia-plugins.yaml` file contents to inline the plugin attributes in the devfile.
 
 .Procedure
 . Add an `attributes` section to your `devfile.yaml` file.
