--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -34,13 +34,13 @@ _Role: Administrator_
 +
 Components of {prod-short} are OCI images. Set up {prod} in offline mode to reduce any extra download at runtime because everything needs to be available from the beginning. See xref:administration-guide:installing-che-in-a-restricted-environment.adoc[].
 
-Optimizing workspace plug-ins::
+Optimizing workspace plugins::
 +
 _Role: User_
 +
-When selecting various plug-ins, each plug-in can bring its own sidecar container, which is an OCI image. {orch-name} pulls the images of these sidecar containers.
+When selecting various plugins, each plugin can bring its own sidecar container, which is an OCI image. {orch-name} pulls the images of these sidecar containers.
 +
-Reduce the number of plug-ins, or disable them to see if start time is faster. See also xref:administration-guide:caching-images-for-faster-workspace-start.adoc[].
+Reduce the number of plugins, or disable them to see if start time is faster. See also xref:administration-guide:caching-images-for-faster-workspace-start.adoc[].
 
 Reducing the number of public endpoints::
 +
@@ -48,9 +48,9 @@ _Role: Administrator_
 +
 For each endpoint, {orch-name} is creating {platforms-ingress} objects. Depending on the underlying configuration, this creation can be slow.
 +
-To avoid this problem, reduce the exposure. For example, to automatically detect a new port listening inside containers and redirect traffic for the processes using a local IP address (`127.0.0.1`), the Che-Theia IDE plug-in has three optional routes.
+To avoid this problem, reduce the exposure. For example, to automatically detect a new port listening inside containers and redirect traffic for the processes using a local IP address (`127.0.0.1`), the Che-Theia IDE plugin has three optional routes.
 +
-By reducing the number of endpoints and checking endpoints of all plug-ins, workspace start can be faster.
+By reducing the number of endpoints and checking endpoints of all plugins, workspace start can be faster.
 
 CDN configuration::
 +
@@ -64,7 +64,7 @@ To check that, open Developer Tools in the browser and check for `vendors` in th
 
 Providing enough CPU resources::
 +
-Plug-ins consume CPU resources. For example, when a plug-in provides IntelliSense features, adding more CPU resources may lead to better performance.
+Plug-ins consume CPU resources. For example, when a plugin provides IntelliSense features, adding more CPU resources may lead to better performance.
 +
 Ensure the CPU settings in the devfile definition, `devfile.yaml`, are correct:
 +
@@ -75,20 +75,20 @@ apiVersion: 1.0.0
 components:
   -
     type: chePlugin
-    id: id/of/plug-in
+    id: id/of/plugin
     cpuLimit: 1360Mi <1>
     cpuRequest: 100m <2>
 ----
-<1> Specifies the CPU limit for the plug-in.
-<2> Specifies the CPU request for the plug-in.
+<1> Specifies the CPU limit for the plugin.
+<2> Specifies the CPU request for the plugin.
 
 Providing enough memory::
 +
-Plug-ins consume CPU and memory resources. For example, when a plug-in provides IntelliSense features, collecting data can consume all the memory allocated to the container.
+Plug-ins consume CPU and memory resources. For example, when a plugin provides IntelliSense features, collecting data can consume all the memory allocated to the container.
 +
-Providing more memory to the plug-in can increase performance. Ensure about the correctness of memory settings:
+Providing more memory to the plugin can increase performance. Ensure about the correctness of memory settings:
 +
-* in the plug-in definition - `meta.yaml` file
+* in the plugin definition - `meta.yaml` file
 * in the devfile definition - `devfile.yaml` file
 +
 [source,yaml]
@@ -103,7 +103,7 @@ spec:
   extensions:
     - https://link.to/vsix
 ----
-<1> Specifies the memory limit for the plug-in.
+<1> Specifies the memory limit for the plugin.
 +
 In the devfile definition (`devfile.yaml`):
 +
@@ -114,8 +114,8 @@ apiVersion: 1.0.0
 components:
   -
     type: chePlugin
-    id: id/of/plug-in
+    id: id/of/plugin
     memoryLimit: 1048M  <1>
     memoryRequest: 256M
 ----
-<1> Specifies the memory limit for this plug-in.
+<1> Specifies the memory limit for this plugin.
