--- a/modules/extensions/partials/proc_authenticating-with-openshift-connector-from-che.adoc
+++ b/modules/extensions/partials/proc_authenticating-with-openshift-connector-from-che.adoc
@@ -7,7 +7,7 @@ This section describes how to authenticate with an OpenShift cluster when the Op
 
 [NOTE]
 ====
-When the OpenShift OAuth service authenticates the {prod-short} instance, the OpenShift Connector plug-in automatically establishes the authentication with the OpenShift instance containing {prod-short}.
+When the OpenShift OAuth service authenticates the {prod-short} instance, the OpenShift Connector plugin automatically establishes the authentication with the OpenShift instance containing {prod-short}.
 ====
 
 OpenShift Connector offers the following methods for logging in to the OpenShift Cluster from the {prod-short} instance:
@@ -18,9 +18,9 @@ OpenShift Connector offers the following methods for logging in to the OpenShift
 
 [NOTE]
 ====
-OpenShift Connector plug-in requires manual connecting to the target cluster.
+OpenShift Connector plugin requires manual connecting to the target cluster.
 
-The OpenShift Connector plug-in logs in to the cluster as `inClusterUser`. If this user does not have manage project permission, this error message appears when creating a project using OpenShift Application Explorer:
+The OpenShift Connector plugin logs in to the cluster as `inClusterUser`. If this user does not have manage project permission, this error message appears when creating a project using OpenShift Application Explorer:
 
 [quote]
 ____
@@ -42,7 +42,7 @@ include::example$snip_{project-context}-authenticating-with-openshift-connector-
 
 * A {prod-short} workspace is available.
 
-* The OpenShift Connector plug-in is available. See xref:installing-openshift-connector-in-che.adoc[].
+* The OpenShift Connector plugin is available. See xref:installing-openshift-connector-in-che.adoc[].
 
 * The OpenShift OAuth provider is available only for the auto-login to the OpenShift instance containing {prod-short}. 
 
