--- a/modules/extensions/partials/proc_creating-components-with-openshift-connector-in-che.adoc
+++ b/modules/extensions/partials/proc_creating-components-with-openshift-connector-in-che.adoc
@@ -7,12 +7,12 @@
 
 In the context of OpenShift, Components and Services are basic structures that need to be stored in Application, which is a part of the OpenShift project that organizes deployable assets into virtual folders for better readability.
 
-This chapter describes how to create OpenShift Components in the {prod-short} using the OpenShift Connector plug-in and push them to an OpenShift cluster.
+This chapter describes how to create OpenShift Components in the {prod-short} using the OpenShift Connector plugin and push them to an OpenShift cluster.
 
 .Prerequisites
 
 * A running instance of {prod-short}.
-* The user is logged in to an OpenShift cluster using the OpenShift Connector plug-in.
+* The user is logged in to an OpenShift cluster using the OpenShift Connector plugin.
 
 .Procedure
 
