--- a/modules/hosted-che/partials/proc_providing-a-devfile.adoc
+++ b/modules/hosted-che/partials/proc_providing-a-devfile.adoc
@@ -6,6 +6,6 @@
 = Providing a devfile
 
 Providing a link:https://devfile.io/[devfile] in the root directory of the repository is recommended to define the development environment of the workspace created by the factory URL.
-In this way, the workspace contains everything users need to review pull requests, such as plug-ins, development commands, and other environment setup.
+In this way, the workspace contains everything users need to review pull requests, such as plugins, development commands, and other environment setup.
 
 The link:https://github.com/eclipse/che-docs/blob/main/devfile.yaml[Che documentation repository devfile] is an example of a well-defined and effective devfile.
