fix: Replace Eclipse Theia in examples (#2495)
* replace the yaml block conctent in the inline example

* replace Theia in Example 5

* replace che-code with che-idea in oexample 1

* rename name of container in example 5

* Update modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc

Co-authored-by: Nick Boldt <nboldt@redhat.com>

* Update modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc

Co-authored-by: Nick Boldt <nboldt@redhat.com>

--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -7,7 +7,7 @@ The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id
 ====
 [source,yaml]
 ----
-id: che-incubator/che-code/insiders
+id: che-incubator/che-idea/latest
 ----
 ====
 
@@ -28,23 +28,34 @@ reference: https://__<hostname_and_path_to_a_remote_file>__/che-editor.yaml
 inline:
   schemaVersion: 2.1.0
   metadata:
-    name: theia-ide
-  commands:
-    ...
-  events:
-    ...
+    name: JetBrains IntelliJ IDEA Community IDE
   components:
-    - name: che-machine-exec
+    - name: intellij
       container:
-        image: 'quay.io/eclipse/che-machine-exec:next'
-        command:
-          ...
-        memoryLimit: 128Mi
+        image: 'quay.io/che-incubator/che-idea:next'
+        volumeMounts:
+          - name: projector-user
+            path: /home/projector-user
+        mountSources: true
+        memoryLimit: 2048M
         memoryRequest: 32Mi
-        cpuLimit: 500m
-        cpuRequest: 30m
-      attributes:
-...
+        cpuLimit: 1500m
+        cpuRequest: 100m
+        endpoints:
+          - name: intellij
+            attributes:
+              type: main
+              cookiesAuthEnabled: true
+              urlRewriteSupported: true
+              discoverable: false
+              path: /?backgroundColor=434343&wss
+            targetPort: 8887
+            exposure: public
+            secure: false
+            protocol: https
+      attributes: {}
+    - name: projector-user
+      volume: {}
 ----
 ====
 
@@ -67,7 +78,7 @@ registryUrl: __<url_of_custom_plug-in_registry>__
 ... # <1>
 override:
   containers:
-    - name: theia-ide
+    - name: che-idea
       memoryLimit: 1280Mi
       cpuLimit: 1510m
       cpuRequest: 102m
