docs: explain specific features added on top of Visual Studio Code (#2505)
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/end-user-guide/pages/developer-workspaces.adoc
+++ b/modules/end-user-guide/pages/developer-workspaces.adoc
@@ -14,6 +14,57 @@
 * Tool dependencies needed by developers to work on a project
 * Application runtime: a replica of the environment where the application runs in production
 
-Pods manage each component of a {prod-short} workspace. Therefore, everything running in a {prod-short} workspace is running inside containers. This makes a {prod-short} workspace highly portable.
+Pods manage each component of a {prod-short} workspace.
+Therefore, everything running in a {prod-short} workspace is running inside containers.
+This makes a {prod-short} workspace highly portable.
 
-The embedded browser-based IDE is the point of access for everything running in a {prod-short} workspace. This makes a {prod-short} workspace easy to share.
+The embedded browser-based IDE is the point of access for everything running in a {prod-short} workspace.
+
+== Microsoft Visual Studio Code - Open Source
+
+Microsoft Visual Studio Code - Open Source is the default browser-based IDE.
+
+{prod-short} adds these extensions:
+
+Commands::
+Translates Devfile commands to Microsoft Visual Studio Code - Open Source tasks.
++
+.Procedure
+* To see the drop-down list of available tasks, type: kbd:[F1] `Tasks: Run Task` kbd:[Enter] `che`.
+
+Activity tracker::
+Tracks events provided by the Microsoft Visual Studio Code - Open Source to determine and stop inactive workspaces.
+This extension does not save, collect, or store data.
+
+API::
+Provides helpers to interact with {devworkspace} and {prod-short}.
+
+GitHub authentication::
+Provides support for authenticating to GitHub.
+It registers the `github` Authentication Provider that can be leveraged by other extensions.
+This also provides the GitHub authentication used by Settings Sync.
+
+Port::
+Detects opening ports and provides redirect URI.
+When a process starts listening to a port, {prod-short} displays a notification with a link to open the resulting resource.
++
+.Procedure
+* To display the endpoint list, type: kbd:[F1] `Explorer: Focus on endpoints View` kbd:[Enter].
+
+Remote::
+Provides commands for the remote authority.
+
+Resource monitor::
+Monitors resources such as CPU and RAM.
+
+Telemetry::
+Detects and sends the following events to a backend telemetry plugin listening on `\http://localhost:$\{DEVWORKSPACE_TELEMETRY_BACKEND_PORT}`:
+
+`WORKSPACE_OPENED`:::
+Sent when the telemetry extension activates
+
+`EDITOR_USED`:::
+Sent on the `vscode.workspace.onDidChangeTextDocument` event
+
+Terminal::
+Opens a terminal to a {devworkspace} container.
