--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -114,7 +114,7 @@ apiVersion: 1.0.0
 components:
   -
     type: chePlugin
-    id: id/of/plugin
+    id: __<plugin_id>__
     memoryLimit: 1048M  <1>
     memoryRequest: 256M
 ----
