--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -75,7 +75,7 @@ apiVersion: 1.0.0
 components:
   -
     type: chePlugin
-    id: id/of/plugin
+    id: __<plugin_id>__
     cpuLimit: 1360Mi <1>
     cpuRequest: 100m <2>
 ----
