--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -377,7 +377,7 @@ components:
 
 
 .Verification steps
-. Verify that the `telemetry-plugin` container is running in the {devworkspace} pod. Here, this is verified by checking the Workspace view within the editor.
+. Verify that the telemetry plugin container is running in the {devworkspace} pod. Here, this is verified by checking the Workspace view within the editor.
 +
 image::creating-a-telemetry-plugin/devworkspace_telemetry_plugin.png[{devworkspace} telemetry plugin]
 
